# CMakeGtk

./: .gitignore  CMakeLists.txt
blueprint/: CMakeLists.txt  datetime.blp  info_row.blp  main.blp  qweather_tab.blp  router_tab.blp  settings_tab.blp  small_weather.blp  xxt_bus_tab.blp
doc/: http.http
resources/: CMakeLists.txt  dashboard.gresource.xml
resources/styles/: app_style.css
src/: CMakeLists.txt  main.cpp
src/data/: setting_data.cpp  setting_data.hpp
src/http/: http_client.cpp  http_client.hpp
src/init/: init_calls.cpp  init_calls.hpp
src/services/: qweather.cpp  qweather.hpp  router_info.cpp  router_info.hpp  xxt_bus.cpp  xxt_bus.hpp
src/tests/: all_tests.cpp  all_tests.hpp  http_tests.cpp
src/utils/: crypto_tool.cpp  crypto_tool.hpp  custom_section.cpp  custom_section.hpp  glib_utility.cpp  glib_utility.hpp  gobj_prop.cpp  gobj_prop.hpp  io_tool.cpp  io_tool.hpp  json_adl.hpp  path_tool.cpp  path_tool.hpp
src/views/: qweather_tab.cpp  qweather_tab.hpp  root_view.cpp  root_view.hpp  router_tab.cpp  router_tab.hpp  settings_tab.cpp  settings_tab.hpp  ui_tab_info.cpp  ui_tab_info.hpp  xxt_bus_tab.cpp  xxt_bus_tab.hpp
src/widgets/: datetime_widget.cpp  gtkchart.cpp  gtkchart.hpp  info_row.cpp  info_row.hpp  small_weather.cpp  small_weather.hpp  some_widget.cpp  some_widget.hpp  widgets.cpp  widgets.hpp
src/widgets/kplot/: compat.h  draw.c  extern.h  kplot.h  reallocarray.c
